# whisper_torchaudio_torch

./: README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
output/: output_results.csv
test/: main_tests.py
whisper-torchaudio-torch/: main.py
whisper_torchaudio_torch/: main.py
