[tool.poetry]
name = "whisper-torchaudio-torch"
version = "0.1.0"
description = "Script para transcribir audios con Whisper,Torch y TorchAudio"
authors = ["maite828 <echeverry.maite@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maite828/whisper-torchaudio-torch.git"


[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.2"
torchaudio = "2.0.1"
whisper-timestamped = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
