[tool.poetry]
name = "whisper-torchaudio-torch"
version = "0.1.0"
description = "Script para transcribir audios con Whisper,Torch y TorchAudio"
authors = ["maite828 <echeverry.maite@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maite828/whisper-torchaudio-torch.git"

[project]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
